--- a/source/webapp/templates/partial/form.html
+++ b/source/webapp/templates/partial/form.html
@@ -1,4 +1,6 @@
-{% csrf_token %}
+{% if not fields_only %}
+    {% csrf_token %}
+{% endif%}
 
 {% for error in form.non_field_errors %}
    <p class="text-danger">{{ error }}</p>
@@ -12,5 +14,7 @@
     {{ field }}
 {% endfor %}
 
-<br>
+{% if not fields_only %}
+    <br>
 <input type="submit" value={{ button_text }} />
+{% endif %}
