реализованы разрешения для группы модераторов

--- a/source/webapp/templates/product/product_add.html
+++ b/source/webapp/templates/product/product_add.html
@@ -4,7 +4,7 @@
 {% block content %}
     <h1>Product Add</h1>
 
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% include "partial/form.html" with button_text="Add" %}
     </form>
 
